--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,23 @@
 {
-    "name": "fookii/validate",
-    "description": "validate form data",
+    "name": "jessehu/validator",
+    "description": "Validator Component for validate variables such as strings, numbers and arrays",
+    "keywords": ["php", "validator"],
     "type": "library",
-    "license": "apache2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "jesse",
-            "email": "hu.li.fa@foocaa.com"
+            "email": "hu2014jesse@gmail.com"
         }
     ],
     "require": {
+        "php": ">5.3.0"
     },
     "autoload": {
         "psr-4": {
-            "Fookii\\Validate\\": "src/lib",
-            "Fookii\\ValidateTest\\": "tests"
+            "Jessehu\\Component\\Validator\\": "src",
+            "Jessehu\\Component\\ValidatorTest\\": "tests"
         }
-    },
-    "config": {
-        "disable-tls": true,
-        "secure-http": false
     },
     "require-dev": {
         "phpunit/phpunit": "4.8"
