--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ php:
   - hhvm
 before_script:
   - composer self-update
-  - composer install
+  - composer install --no-dev --quiet
 script:
-  - phpunit --coverage-clover=coverage.clover
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - phpunit -c phpunit.xml --coverage-text
