--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ php:
   - 7
   - hhvm
 before_script:
-  - composer self-update
   - composer install
 script:
-  - phpunit --coverage-clover=coverage.clover
+  - phpunit -c phpunit.xml --coverage-text
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
