# travis-ci 运行单元测试前composer生成自动加载autoload.php文件

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - hhvm
 before_script:
   - composer install
+  - composer dump-autoload --optimize
 script:
   - phpunit -c phpunit.xml --coverage-text
 after_script:
