--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer install
   - composer dump-autoload --optimize
 script:
-  - phpunit -c phpunit.xml --coverage-text
+  - phpunit --bootstrap ./tests/bootstrap.php -c phpunit.xml --teamcity
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
